# restaurant-c-mem

./: CMakeLists.txt  README.md  config1.txt  config2.txt  makefile
include/: Action.h  Customer.h  Dish.h  Restaurant.h  Table.h
src/: Action.cpp  Customer.cpp  Dish.cpp  Main.cpp  Restaurant.cpp  Table.cpp
